--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "nodemon": "^1.10.2",
