Fix syntax error.  Add npm start command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A modern journal for improving mood",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --content-base ."
+    "start": "webpack-dev-server --inline --content-base .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-server": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
