--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
@@ -26,6 +27,9 @@
     "nodemon": "^1.10.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "redux": "^3.6.0",
     "sequelize": "^3.24.3"
   },
   "devDependencies": {
