--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A modern journal for improving mood",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --inline --content-base ."
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/scrumptiousAmpersand/journal#readme",
   "dependencies": {
+    "babel-loader": "^6.2.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
@@ -39,6 +40,9 @@
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "sinon": "^1.17.6"
+    "sinon": "^1.17.6",
+    "http-server": "^0.8.5",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
