--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A modern journal for improving mood",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --content-base .",
+    "start": "webpack --inline --content-base .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "nodemon server/server.js"
   },
