--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "journal",
   "version": "1.0.0",
   "description": "A modern journal for improving mood",
-  "main": "index.js",
+  "main": "client/index.js",
   "scripts": {
-    "start": "webpack --inline --content-base .",
+    "start": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "nodemon server/server.js",
-    "build-css": "node-sass --include-path scss client/styles/scss/main.scss client/styles/css/main.css",
+    "webpack": "webpack --progress --colors --watch --inline --content-base .",
+    "build-css": "node-sass --include-path scss client/styles/scss/main.scss client/styles/css/styles.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
@@ -45,10 +45,15 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
-    "mocha": "^3.0.2",
-    "sinon": "^1.17.6",
+    "eslint": "^3.6.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "http-server": "^0.8.5",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "mocha": "^3.0.2",
+    "node-sass": "^3.10.0",
+    "sinon": "^1.17.6",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   }
 }
