--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,9 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-#floobits
+# floobits
 .floo
 .flooignore
 
-#webpack build
-build
+# build
+dist
