--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A modern journal for improving mood",
   "main": "client/index.js",
   "scripts": {
-    // "start": "concurrently --kill-others \"nodemon server/server.js\" \"npm run webpack\" \"npm run watch-css\"",
     "start": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --progress --colors --watch --inline --content-base .",
@@ -50,9 +49,28 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-image": "^2.7.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-main-bower-files": "^1.5.3",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-shell": "^0.5.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.9",
     "http-server": "^0.8.5",
+    "jshint": "^2.9.3",
     "mocha": "^3.0.2",
     "node-sass": "^3.10.0",
+    "run-sequence": "^1.2.2",
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.6",
     "webpack": "^1.13.2",
