--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "jquery": "^3.1.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
@@ -37,7 +38,9 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
-    "sequelize": "^3.24.3"
+    "sequelize": "^3.24.3",
+    "three": "^0.81.2",
+    "three-text2d": "^0.3.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
