Add dependencies for facebook oath.

--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
     "path": "^0.12.7",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
+    "react-facebook-login-component": "^0.6.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "recharts": "^0.15.1",
@@ -74,6 +78,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
+    "gulp-webpack": "^1.5.0",
     "http-server": "^0.8.5",
     "jshint": "^2.9.3",
     "mocha": "^3.0.2",
