--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "gulp-webpack": "^1.5.0",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
