--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
