--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "gulp-webpack": "^1.5.0",
+    "jquery": "^3.1.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
@@ -59,6 +60,7 @@
     "gulp-jshint": "^2.0.1",
     "gulp-main-bower-files": "^1.5.3",
     "gulp-minify-css": "^1.2.4",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-plumber": "^1.1.0",
