--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "bootstrap-switch": "^3.3.2",
     "cookie-parser": "^1.4.3",
     "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
