--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "moment": "^2.15.1",
+    "moment-range": "^2.2.0",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
@@ -39,6 +40,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "recharts": "^0.15.1",
     "redux": "^3.6.0",
     "sequelize": "^3.24.3"
   },
