--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "react-router": "^2.8.1",
     "recharts": "^0.15.1",
     "redux": "^3.6.0",
-    "sequelize": "^3.24.3",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1",
+    "sequelize": "^3.24.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
