--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
+    "path": "^0.12.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
@@ -42,7 +43,8 @@
     "react-router": "^2.8.1",
     "recharts": "^0.15.1",
     "redux": "^3.6.0",
-    "sequelize": "^3.24.3"
+    "sequelize": "^3.24.3",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
