--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "d3": "^3.5.17",
+    "d3-cloud": "^1.2.1",
     "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
