--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jshint": "^2.9.3",
     "mocha": "^3.0.2",
     "node-sass": "^3.10.0",
+    "react-hot-loader": "^3.0.0-beta.5",
     "run-sequence": "^1.2.2",
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.6",
