--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
     "react": "^15.3.2",
+    "react-bootstrap-switch": "^15.0.0",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
