--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.14.1",
     "moment": "^2.15.1",
     "moment-range": "^2.2.0",
+    "jquery": "^3.1.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
