--- a/package.json
+++ b/package.json
@@ -34,30 +34,30 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "gulp-webpack": "^1.5.0",
+    "jquery": "^3.1.1",
     "moment": "^2.15.1",
     "moment-range": "^2.2.0",
-    "jquery": "^3.1.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
-    "path": "^0.12.7",
     "passport": "^0.3.2",
+    "passport-amazon": "^1.0.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^15.3.2",
-    "react-bootstrap-switch": "^15.0.0",
     "react-bootstrap": "^0.30.3",
+    "react-bootstrap-switch": "^15.0.0",
     "react-dom": "^15.3.2",
     "react-facebook-login-component": "^0.6.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "recharts": "^0.15.1",
     "redux": "^3.6.0",
-    "serve-favicon": "^2.3.0",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
-    "sequelize": "^3.24.3"
+    "sequelize": "^3.24.3",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
