--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
     "gulp-image": "^2.7.0",
+    "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
     "gulp-main-bower-files": "^1.5.3",
     "gulp-minify-css": "^1.2.4",
