--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.14.0",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
@@ -58,11 +59,14 @@
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.24.3",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "webpack-merge": "^0.14.1",
+    "webpack-validator": "^2.2.9"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
+    "babel-plugin-transform-react-jsx-img-import": "^0.1.2",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.16.0",
@@ -94,7 +98,7 @@
     "http-server": "^0.8.5",
     "jshint": "^2.9.3",
     "mocha": "^3.0.2",
-    "node-sass": "^3.10.0",
+    "node-sass": "^3.10.1",
     "react-hot-loader": "^3.0.0-beta.5",
     "run-sequence": "^1.2.2",
     "sass-loader": "^4.0.2",
