--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "bootstrap-switch": "^3.3.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "d3": "^3.5.17",
     "d3-cloud": "^1.2.1",
@@ -57,7 +58,8 @@
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.24.3",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
