--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/scrumptiousAmpersand/journal#readme",
   "dependencies": {
+    "@google-cloud/language": "^0.3.0",
     "axios": "^0.14.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.16.0",
@@ -35,6 +36,7 @@
     "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "google-cloud": "^0.41.2",
     "gulp-webpack": "^1.5.0",
     "jquery": "^3.1.1",
     "moment": "^2.15.1",
