--- a/package.json
+++ b/package.json
@@ -68,10 +68,12 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-react-jsx-img-import": "^0.1.2",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "browser-sync": "^2.17.2",
     "chai": "^3.5.0",
     "eslint": "^3.6.0",
     "eslint-plugin-import": "^1.16.0",
@@ -106,8 +108,10 @@
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.6",
     "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
+    "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.16.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.13.0",
+    "webpack-module-hot-accept": "^1.0.4",
+    "webpack-stream": "^3.2.0"
   }
 }
