--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-airbnb": "^11.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "forever-monitor": "^1.7.0",
     "google-cloud": "^0.41.2",
     "gulp-webpack": "^1.5.0",
     "jquery": "^3.1.1",
