--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "db": {
     "username": "root",
-    "password": "password" // this password should probably be different now that it is deployed
+    "password": "goddamnhowdidiforgetthisshit"
   }
 }
 
