Update settings.json and db/config.js to pick between dev and prod

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,10 @@
 {
-  "db": {
+  "dbDev": {
     "username": "root",
     "password": "password"
+  },
+  "dbProd": {
+    "username": "root",
+    "password": "goddamnhowdidiforgetthisshit"
   }
 }
